--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
           <label for="info">Informações  extras </label>
           <textarea id = "info"></textarea>
         </div>
+        <div class="input-wrapper">
+          <label for="category">Categoria</label>
+          <select id="category">
+            <option value="live"> Ao vivo</option>
+            <option value="podcast">Podcast</option>
+            <option value="mentorship">Mentoria</option>
+          </select>
+        </div>
       </div>
     </fieldset>
 
