added button and footer

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             <label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
             <input type="password" id="event-password" />
           </div>
+          <div class="checkbox-wrapper">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">Evento privado</span></label>
+          </div>
 
         </div>
       </fieldset>
@@ -100,9 +104,13 @@
 
         </div>
       </fieldset>
-
-
     </form>
+
+    <footer>
+      <div class="buttons-wrapper">
+        <input class ="button" type="submit" value="Salvar evento">
+      </div>
+    </footer>
   </div>
 </body>
 </html>
