--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>O primeiro passo, é preencher esse
         formulário de inscrição.</p>
     </header>
-    <form>
+    <form id="my-form">
 
       <fieldset>
         <div class="fieldset-wrapper">
@@ -27,7 +27,10 @@
 
           <div class="input-wrapper">
             <label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-            <input type="text" id="event-title" />
+            <input type="text" 
+            required
+            minlength="8"
+            id="event-title" />
           </div>
   
           <div class="input-wrapper">
@@ -37,7 +40,9 @@
 
           <div class="input-wrapper">
             <label for="event-whatsapp">Whatsapp para contato <span>(somente números)</span></label>
-            <input type="number" id="event-whatsapp" />
+            <input type="number"
+            required
+            id="event-whatsapp" />
           </div>
 
           <div class="input-wrapper">
@@ -63,12 +68,17 @@
 
           <div class="input-wrapper">
             <label for="event-email">E-mail do administrador <span>(digite um email válido)</span></label>
-            <input type="email" id="event-email" />
+            <input type="email"
+            required
+             id="event-email" />
           </div>
 
           <div class="input-wrapper">
             <label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
-            <input type="password" id="event-password" />
+            <input type="password" 
+            required
+            minlength="8"
+            id="event-password" />
           </div>
           <div class="checkbox-wrapper">
             <input type="checkbox" id="checkbox">
@@ -108,7 +118,7 @@
 
     <footer>
       <div class="buttons-wrapper">
-        <input class ="button" type="submit" value="Salvar evento">
+        <input form="my-form" class ="button" type="submit" value="Salvar evento">
       </div>
     </footer>
   </div>
